@@ -23,6 +23,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - portal_tabs to access a MeetingConfig is now generated, we do not add an action in portal_tabs anymore
 - Display the title of current MeetingConfig in the portlet_plonemeeting header instead laconic term 'Manage'
   so it recalls where we are.  It is necessary when using groups of configs
+- Added MeetingConfig.itemFieldsToKeepConfigSortingFor field, item fields (proposingGroup or category) selected
+  there will make vocabulary displayed on the item to keep position of terms from the configuration instead default
+  behavior that sort vocabularies alphabetically
 
 4.1b4 (2018-01-31)
 ------------------
